# DuneEngine

./: CMakeLists.txt  README.md  Shader.h  build.bat  gameEngine.cpp  imgui.ini  main.cpp  mesh.h  model.h  test.cpp  vcpkg-configuration.json  vcpkg.json
src/: AABB.h  Application.cpp  Application.h  Engine.cpp  Engine.h  Globals.h  Module.h  ModuleCamera.cpp  ModuleCamera.h  ModuleEditor.cpp  ModuleEditor.h  ModuleImGui.cpp  ModuleImGui.h  ModuleInput.cpp  ModuleInput.h  ModuleRender.cpp  ModuleRender.h  ModuleTextures.cpp  ModuleTextures.h  ModuleWindow.cpp  ModuleWindow.h  MousePicker.cpp  MousePicker.h  PanelStats.cpp  PanelStats.h  Ray.h  Raycast.cpp  Raycast.h  ResourceUtils.h  main.cpp
src/Assets/: Mesh.cpp  Mesh.h
src/Core/: DuneEngine.cpp  DuneEngine.h
src/Platform/: Window.cpp  Window.h
src/Render/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
